# signal-extraction-rnn-lstm

./: .env-example  .gitignore  CLAUDE.md  HOMEWORK_BRIEF.md  README.md  WEBSITE_NOTE.md  pyproject.toml
config/: rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_dataset_construction.md  PRD_models.md  PRD_signal_generation.md  PRD_training_evaluation.md  PROMPTS.md  TODO.md
docs/adr/: ADR-001-gatekeeper-na.md  ADR-002-pytorch.md  ADR-003-selector-broadcast.md  ADR-004-dataset-size.md  ADR-005-noise-distribution.md  ADR-007-seeds-per-cell.md  ADR-009-component-decomposition.md  ADR-012-gatekeeper-absent.md  ADR-014-results-layout.md  ADR-015-base-phase-distribution.md  ADR-016-random-sampling-stationary.md  ADR-017-dataloader-shuffling.md
docs/audit/: AUDIT-2026-05.md
docs/experiments/: EXP-000-pipeline-smoke.md  EXP-001-baseline-3seeds.md  EXP-002-beta-sweep.md  EXP-003-baseline-3seeds-beta-pi-4.md  EXP-008-rnn-parameter-matched.md
notebooks/: results.ipynb
scripts/: check.sh  run_experiment.py  train.py
src/signal_extraction_rnn_lstm/: __init__.py  constants.py
src/signal_extraction_rnn_lstm/sdk/: __init__.py  sdk.py
src/signal_extraction_rnn_lstm/services/: __init__.py  dataset.py  evaluation.py  signal_gen.py  training.py
src/signal_extraction_rnn_lstm/shared/: __init__.py  config.py  device.py  seeding.py  version.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_models_smoke.py  test_reproducibility.py  test_sdk_run_experiment.py  test_sdk_smoke.py
tests/unit/: __init__.py  test_config.py  test_dataset.py  test_device.py  test_evaluation.py  test_sdk.py  test_seeding.py  test_signal_gen.py  test_training.py
website/: README.md  index.html  script.js  styles.css  vercel.json
(+10 files in other folders)
