[project]
name = "signal-extraction-rnn-lstm"
version = "1.00"
description = "Deep-learning comparison of FC / RNN / LSTM on conditional sinusoid extraction."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

# Entry points: TBD (M4). CLI scripts live in scripts/ as argparse wrappers.
# [project.scripts]
# train = "signal_extraction_rnn_lstm.sdk.sdk:..."
# run-experiment = "signal_extraction_rnn_lstm.sdk.sdk:..."

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "jupyterlab>=4.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/notebooks/*",
    "*/scripts/*",
    # Stub modules awaiting their milestone — re-include each one when it
    # ships GREEN.  See docs/TODO.md for the milestone map.
    "*/services/evaluation.py",       # M4
    "*/services/training.py",         # M4
    "*/services/models/*",            # M3
    "*/shared/device.py",             # M2c
    "*/shared/seeding.py",            # M2c
    "*/sdk/sdk.py",                   # M2c init + M4 train/eval; treat as stub for now
]

[tool.coverage.report]
fail_under = 85
